fixed spacing for buttons via css addition and increased welcome message

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,3 +73,7 @@ h1 {
 .figure-caption {
     color: white;
 }
+
+.choices {
+    word-spacing: inherit;    
+}
